# mcp-template

./: README.md  main.py  pyproject.toml
mcp_template.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
